한빛 미디어 세미나
한빛 미디어 세미나

--- a/md/한빛미디어_하라는 개발은 안하고!.md
+++ b/md/한빛미디어_하라는 개발은 안하고!.md
@@ -1,4 +1,5 @@
 # 신입 개발자가 되려면 커뮤니티를 찾아가보자!
+
 ### 1. 신입 개발자가 되려고 하는 사람들이 가장 많이 하는 질문
 
 비전공자도 개발자가 될 수 있나요????  --> 상관 없음
@@ -82,6 +83,73 @@ developer student club(DSC) --> 한번 찾아보자.
 # 네트워크 파티
 
 개발자의 수명 --> 40대
-그러면 뭘 해야하나    
+그러면 뭘 해야하나 --> 융합하세요 ^^7
+
 # 초보가 간단한 프로그램 만드는 방법
+발표자 : 김연경
+
+### 1. 프로그램은 어떻게 구상할까?
+최소사항을 먼저 하고 추가사항을 더한다.  
+참고할 코드가 많은 프로젝트를 찾아보자.  
+
+요구사항 기술서를 쓰거나  
+UML 다이어그램 만들때도    
+이 기능들을 어떻게 쪼개야 할까?  
+### 2. 어떤 언어를 공부할까?
+필요한 언어와 개발환경  
+관련 문제를 많이 풀어보자   
+
+### 3. tips!
+코드를 짜던 중에, 실수를 한 부분은 별표를 쳐 놓고 확인을 계속 해보자
+실수는 항상 같은 실수를 하기 마련이다.  
+주석으로 그 코드의 역할을 적어두는것이 좋을 것 같다(이거 호불호 갈리던데)  
+
+how to ,what is, 최소 키워드 로 검색을 하자  
+클래스를 쪼개는 기준은 일단 만들어 보고 짜르자.
+
+# 설계도는 그려봤나? 문서화 되지 않은 개발이 왜 재앙을 부르는가?
+
+### 1.문서화란 무엇인가?
+    어떻게 만드는지 설계도라고 생각하자.
+### 2.왜 문서화 하는가?
+    아무것도 남기지 않으면, 아무것도 남지 않을것이다.
+    문서를 남기지 않으면, 자신을 어필할 것이 남지 않음
+    주니어가 문서가 있으면 , 어떻게 만들지 어떻게 해야하는지 알 수 있다.
+    시니어는 설명을 반복하면 귀찮고 짜증남 --> 그래서 문서로 남기면 편하다.    
+### 3.무엇을 문서화 하는가?
+    기억되고 공유되어야 할 모든 것  
+    요구 -> 화면 -> 사전 -> 엔티티 -> 프로세스 -> 목록  
+* 요구사항 정의서 : 요구사항을 정의 한 문서  
+* 화면 정의서 : 유저에게 보여 줄 화면들을 정의해 놓은 문서
+* 사전 정의서 : 개발 할 때 사용할 언어들을 정의해 놓은 문서
+* 엔티티 정의서(DB관련) : DB를 냉장고,테이블을 냉장고 칸이라고 하면 엔티티는 재료가 되겠다(구별해야 하는 정보의 단위)  엔티티 정의서는 엔티티를 정의한 문서이다.   
+* 테이블 정의서(DB관련) : 테이블과 엔티티의 관계를 설명한 정의서.  
+* 프로세스 정의서 : 어떤 프로세스를 만들어야 하는가를 정의
+* 프로세스 설계서 : 프로세스들의 관계를 설계 해놓은 것.
+* 프로그램 목록 : 프로그램들의 기능을 적어놓는 문서  
+### 4.어떻게 문서화 하는가?
+while(1){
+    열심히 쓰고
+    열심히 읽고
+    열심히 소통한다.
+}
+
+---
+문서화는 중요하다
+아무것도 남기지 않으면 아무것도 남지 않을것이다.
+
+# 어서와 개발은 처음이지?
+
+10분정도 했는데, 답이 안나온다? --> 질문  
+내가 알아서 해야하는 범위가 어디까지일까?  
+기본적으로 url에는 link를 걸어주자.  
+opengraph는 기본이지
+
+---
+
+착각은 자유가 아니다 --> 할 수 있다고 자부하지 마라  
+내가 못하는 것을 널리 알려라 --> 그래야 도움을 받을 수 있다.  
+계획은 구체적으로 세우자 --> 최소 하루 단위로 쪼개서 일정을 짜야한다.    
+체력은 국력 --> 체력,지구력 같은 것들  
+
 
