[FIX] 대대적인 개편 및 파일정리

--- a/md/실용주의 프로그래머.md
+++ b/md/실용주의 프로그래머.md
@@ -38,27 +38,50 @@
    도서관에서 책이 맨 앞에 놓여있다고 좋은 책이 아니다.
    좋은 자료를 구분할 수 있는 눈을 가지자.
 
-7. 소통
-   말하고 싶은것이 무엇인지를 알아라.
+7. 소통말하고 싶은것이 무엇인지를 알아라.
    글을 써 놓고, 이것이 정말로 내가 전달하고 싶은 말인가를 생각하라.
    청중을 알아라
    프론트 엔드 개발자가 백엔드 개발자에게 프론트 엔드 코드를 설명해 봤자.
    못알아먹는다. 청중의 수준에 맞게 소통하라
    청중을 이해하는 6가지 단어 WISDOM
-
-   * 무엇을 배우길 원하는가? (what)
+   
+* 무엇을 배우길 원하는가? (what)
    * 얼마나 관심이 있는가? (interest)
    * 얼마나 소양이 있는가? (sophisticated)
    * 얼마나 구체적이길 원하는가? (detail)
    * 누가 정보를 소유하길 원하는가? (own)
    * 동기를 뭘로해야 경청하는가? (motive)
-
-   때를 잘 골라라
+   
+때를 잘 골라라
    청중이 무엇을 원하는지는, 그들의 우선순위를 먼저 알아야 한다.
    상사에게 혼나고 온 사람은 상사욕을 듣고싶어 하지 않을까(농담이다).
-
-   소스코드에 대해서 혼나고 온 사람은 소스코드에 대한 얘기를 듣고싶어할 것이다.
+   
+소스코드에 대해서 혼나고 온 사람은 소스코드에 대한 얘기를 듣고싶어할 것이다.
    멋져 보이게 하라
    설명을 해야하는 사람들에게 보여주는 매개물을 항상 멋져보이게 유지하라
+   
+그렇게 되면, 관심을 끌 수 있을 것이다.
+   
+8. 중복하지 마라(DRY, Don't Repeat yourself)
 
-   그렇게 되면, 관심을 끌 수 있을 것이다.
+   * 강요된 중복
+     코드나 라이브러리 사용시에 어쩔수 없다고 생각되는 중복
+   * 부주의한 중복
+     데이터 설계를 제대로 하지 않아서 생기는 중복
+     데이터 설계를 제대로
+   * 참을성 없는 중복
+     개발자가 귀찮아서 안고친 중복
+     절대로 고치세요 이게 제일 고치기 쉬움
+   * 개발자간의 중복
+     협업간에 생기는 중복으로 가장 고치기 힘들다.
+
+9. 관련없는 것 간에 서로 영향이 없도록 하라
+   직교성이 뛰어난 코드는 컴포넌트들의 재사용성이 높고 코드의 질이 좋아진다.
+   직교성이 뛰어나게 되면, 분리가 잘 되기 때문에, 테스트가 쉽고 에러 잡기 쉬워진다.
+   직교성을 높이는 방법
+
+   * 코드의 결합도를 줄일것
+   * 전역 변수를 피할것
+   * 유사한 함수를 제거하고 관리할것
+   * 버그 발생시, 수정할 때 얼마나 힘들었는가?
+   * 
