실용주의 프로그래머

--- a/md/실용주의 프로그래머.md
+++ b/md/실용주의 프로그래머.md
@@ -52,16 +52,17 @@
    * 누가 정보를 소유하길 원하는가? (own)
    * 동기를 뭘로해야 경청하는가? (motive)
    
+
 때를 잘 골라라
    청중이 무엇을 원하는지는, 그들의 우선순위를 먼저 알아야 한다.
    상사에게 혼나고 온 사람은 상사욕을 듣고싶어 하지 않을까(농담이다).
-   
+
 소스코드에 대해서 혼나고 온 사람은 소스코드에 대한 얘기를 듣고싶어할 것이다.
    멋져 보이게 하라
    설명을 해야하는 사람들에게 보여주는 매개물을 항상 멋져보이게 유지하라
-   
+
 그렇게 되면, 관심을 끌 수 있을 것이다.
-   
+
 8. 중복하지 마라(DRY, Don't Repeat yourself)
 
    * 강요된 중복
@@ -74,7 +75,6 @@
      절대로 고치세요 이게 제일 고치기 쉬움
    * 개발자간의 중복
      협업간에 생기는 중복으로 가장 고치기 힘들다.
-
 9. 관련없는 것 간에 서로 영향이 없도록 하라
    직교성이 뛰어난 코드는 컴포넌트들의 재사용성이 높고 코드의 질이 좋아진다.
    직교성이 뛰어나게 되면, 분리가 잘 되기 때문에, 테스트가 쉽고 에러 잡기 쉬워진다.
@@ -84,4 +84,30 @@
    * 전역 변수를 피할것
    * 유사한 함수를 제거하고 관리할것
    * 버그 발생시, 수정할 때 얼마나 힘들었는가?
-   * 
+10. 예광탄 코드
+    만약에 당신이 개발중에 해본 적 없는 도전을 해야한다면?
+    예광탄 코드 즉, 테스트용 코드를 사용하여 도전해 보아라
+    이 테스트용 코드는 실험만의 용도가 아니라, 그 이후에 계속 사용될 코드처럼 프로그래밍하라.
+    이 코드는 중간에 여러 시스템들을 상호작용하는 역할을 하는 코드가 좋다.
+11.  추정
+    얼마나 정확한 것이 충분히 정확한 것인가?
+    어떤 의미에서 모든 답은 추정치이다. 단지 누가 남보다 더 정확한지를 다를 뿐이다.
+    그러므로, 누군가 추정치 즉 어떠한 값을 물었을 때, 질문자가 원하는 정확도를 잘 파악해야 한다.
+    만약에 할머니가 언제 오냐고 물으신다면, 그건 점심에 도착하는지 저녁에 도착하는 지 정도의 정확도 일것이다.
+    하지만 내가 수영선수라서, 0.01초의 차이가 순위가 갈린다면? 질문자가 요구하는 정확도는 항상 다르다.
+    추정하는 법
+    1. 무엇을 묻고 있는지를 알아보자
+       상대방이 무엇을 묻고있는지를 파악하는 것이 가장 중요하다.
+    2. 시스템의 모델을 만들어 보아라
+       클라이언트가 요청한 것이 무엇인지 이해한 후에는 대략적이고 꾸밈 없는 모델을 제작해 보자.
+       그 모델은 시스템을 어떻게 구현해야 하는지 대략적인 그림을 제공해 줄 것이다.
+    3. 모델을 컴포넌트로 나누어라
+       모델을 만들었다면 그것을 컴포넌트 단위로 나누어서 분해해 보아라.
+       이렇게 되면 컴포넌트 간의 상호작용을 어떻게 하는지 고민해야 한다.
+       이렇게 되면 컴포넌트가 전체 모델에 어떻게 기여하는지에 영향을 미치는 
+       매개변수를 갖고 있다는 것을 알 수 있다.
+    4. 각 매개 변수에 값을 주어라
+       이 매개변수를 찾아냈다면, 그 매개변수에 값을 줄 차례이다. 
+       결과에 가장 큰 영향을 끼치는 매개변수가 무엇인지 보고, 그 매개 변수의 값들을 최대한 정확하게
+       산출해내는 것이다. 보통 결과에 단순히 더해지는 값 보다는 곱해지거나 나뉘는 값이 영향력이 더 크다.
+       라인의 속도를 두배로 증가시키면, 시간 당 받는 데이터도 두배가 될 것이다.
